eliminar archivos y configuraciones de microservicios no utilizados

--- a/.gitignore
+++ b/.gitignore
@@ -26,14 +26,4 @@ dist/
 
 package-lock.json
 
-
-# Backend ignore files
-Backend/ms-*/target/
-Backend/ms-*/.mvn/
-Backend/ms-*/mvnw
-Backend/ms-*/mvnw.cmd
-Backend/ms-*/.gitignore
-Backend/ms-*/.gitattributes
-Backend/ms-*/HELP.md
-Backend/ms-*/.vscode/
-Backend/ms-*/.idea/
+.vscode/
